# td-asr

./: .gitignore  ISSUES.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_SERVER.md  STATUS.md  check_models.py  design.md  download_models.py  main.py  pyproject.toml  run_server.sh  test_asr_simple.py  test_client.py  test_models.py
cpp-implement/: CMakeLists.txt  readme.md
design/: mermaid
examples/: test_client.py
models/damo/punc_ct-transformer_zh-cn-common-vad_realtime-vocab272727-onnx/: .mdl  .mv  README.md  config.yaml  configuration.json
models/damo/speech_fsmn_vad_zh-cn-16k-common-onnx/: .mdl  .mv  README.md
models/damo/speech_ngram_lm_zh-cn-ai-wesp-fst/: .mdl  .mv  README.md  configuration.json
models/damo/speech_paraformer-large-vad-punc_asr_nat-zh-cn-16k-common-vocab8404-onnx/: .mdl  .mv  README.md  am.mvn
models/damo/speech_paraformer-large_asr_nat-zh-cn-16k-common-vocab8404-online-onnx/: .mdl  .mv  README.md  configuration.json  quickstart.md
models/thuduj12/fst_itn_zh/: .mdl  .mv  README.md
src/: __init__.py  asr_engine.py  asr_model.py  frontend.py  punc_model.py  server.py  utils.py  vad_model.py
td_asr/: __init__.py  asr_engine.py  audio.py  config.py  frontend.py  models.py  server.py
