[project]
name = "td-asr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.2",
    "click>=8.3.1",
    "fastapi>=0.122.0",
    "loguru>=0.7.3",
    "numpy>=1.24.0",
    "onnxruntime>=1.23.2",
    "websockets>=15.0.1",
    "pyyaml>=6.0",
    "librosa>=0.10.0",
    "scipy>=1.10.0",
    "uvicorn>=0.24.0",
]


[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"
